@@ -4,9 +4,15 @@
 <title>MODx CMF Manager Login</title>
 <meta http-equiv="content-type" content="text/html; charset=[+modx_charset+]" />
 <meta name="robots" content="noindex, nofollow" />
+<link rel="stylesheet" type="text/css" href="media/style/[+theme+]/style.css" />
 <script src="media/script/scriptaculous/prototype.js" type="text/javascript"></script>
 
 <script type="text/javascript">
+/* <![CDATA[ */
+    if (top.frames.length!=0) {
+        top.location=self.document.location;
+    }
+
 	function doLogin() {
 		var f, values;
 		if(!self.Ajax) document.loginfrm.submit();
@@ -31,15 +37,7 @@
 			alert(text);
 		}
 	}
-</script>
 
-<link rel="stylesheet" type="text/css" href="media/style/[+theme+]/style.css" />
-
-<script type="text/javascript">
-/* <![CDATA[ */
-    if (top.frames.length!=0) {
-        top.location=self.document.location;
-    }
 /* ]]> */
 </script>
 </head>
